--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
             <div class="about-1"  class="hidden">
                 <h2  >About Me</h2>
                 <p class="text">
-                    I am currently a University student at the University of Johannesburg, persuing a degree in Applied Mathematics and Computer Science. I am experience
+                    I am currently a University student at the University of Johannesburg, persuing a degree in Applied Mathematics and Computer Science. 
+                    I am also enrolled for a software engineering program with ALX.
+                    I am fascinated by web development, especially responsive layouts.
                 </p>
             </div>
         </section>
@@ -145,8 +147,8 @@
                 <a id="card-2" class="cards" href="https://kaeycer.github.io/order-summary-component-main/"></a>
                 <a id="card-3" class="cards" href="https://kaeycer.github.io/profile-card-component-main/"></a>
                 <a id="card-4" class="cards" href="https://kaeycer.github.io/qr-code-component-main/"></a>
-                <a id="card-5" class="cards" href="#"></a>
-                <a id="card-6" class="cards" href="#"></a>
+                <!-- <a id="card-5" class="cards" href="#"></a>
+                <a id="card-6" class="cards" href="#"></a> -->
             </div>
         </section>
 
