--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
         </div>
         <!-- About Section: Includes an my image and a short bio highliting my skills and experience -->
         <section class="hidden" id="about" >
-            <img src="#" alt="ABOUT ME img">
+            <div class="profileImageContainer">
+                <span id="profileImage"></span>
+            </div>
             <div class="about-1"  class="hidden">
                 <h2  >About Me</h2>
                 <p class="text">
