Final touchups done, yeyy

--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
         </div>
         <!-- About Section: Includes an my image and a short bio highliting my skills and experience -->
         <section class="hidden" id="about" >
-            <div class="profileImageContainer">
-                <span id="profileImage"></span>
+            <div class="upper">
+                <div class="profileImageContainer"></div>
             </div>
+            
             <div class="about-1"  class="hidden">
                 <h2  >About Me</h2>
                 <p class="text">
@@ -181,7 +182,7 @@
 
     <!-- Footer Section: Includes copyright and other relevant links -->
     <footer class="headContainer">
-        Copyright &copy; Mpumelelo Mayisela.<br>All rights reserved
+        Copyright &copy; Mpumelelo Mayisela. All rights reserved
     </footer>
 
 </body>
