added a copyright year

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             
             <div class="about-1"  class="hidden">
-                <h2  >About Me</h2>
+                <h2>About Me</h2>
                 <p class="text">
                     I am currently a University student at the University of Johannesburg, persuing a degree in Applied Mathematics and Computer Science. 
                     I am also enrolled for a software engineering program with ALX.
@@ -182,7 +182,7 @@
 
     <!-- Footer Section: Includes copyright and other relevant links -->
     <footer class="headContainer">
-        Copyright &copy; Mpumelelo Mayisela. All rights reserved
+        Copyright &copy; 2024 Mpumelelo Mayisela. All rights reserved
     </footer>
 
 </body>
